syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.exxeta.recommendationservice";
option java_outer_classname = "RecommendationServiceProto";

service RecommendationService {
  rpc CreateRecommendation (CreateRecommendationRequest) returns (RecommendationGrpcDto);
}

message CreateRecommendationRequest {
  repeated string bought_categories = 1;
  repeated string available_categories = 2;
}

message RecommendationGrpcDto {
  repeated string recommended_categories = 1;
}